<resources>
    <string name="app_name">QR App</string>
    <string name="enter_pass">Enter Password</string>
    <string name="EnterEmail">Enter Email</string>
    <string name="Login">Login</string>
    <string name="login_description">Don\'t have an account?</string>
    <string name="Signup">Signup</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="signup_description">Already have an account? Login</string>
    <string name="displayTxt">Scan Something...</string>
    <string name="History">History</string>
    <string name="Data">Data</string>
    <string name="Time">Time</string>
</resources>